# TA-C-Syntax-Highlighter

./: CMakeLists.txt  Group.cpp  Group.h  Process.cpp  Process.h  README.md  configuratiebestand.ini  engine.cc  htmlConverter.cpp  htmlConverter.h  ini_configuration.cc  input.txt  output.html
Automaten/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  RE.cpp  RE.h  State.cpp  State.h  Table.cpp  Table.h
files/: configuratiebestand.ini  filelist.txt  input.txt  inputAutoComp1.txt  inputMissingClose.txt  inputMissingOpen.txt  inputNewConf.txt  inputSemicolon.txt  new_configuratiebestand.ini  output.html
src/: Conf_Reader.cpp  Conf_Reader.h  Group.cpp  Group.h  Process.cpp  Process.h  htmlConverter.cpp  htmlConverter.h
src/Automaten/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  RE.cpp  RE.h  State.cpp  State.h  Table.h
src/Utils/: Logger.cpp  Logger.h  functions.cpp  functions.h
tests/cpp/: test.cpp
